--- a/public/new-recipe.html
+++ b/public/new-recipe.html
@@ -8,28 +8,14 @@
 </head>
 <body>    
     <header>
-    <h1>Recipes</h1>
+    <h1>New recipe</h1>
 </header>
 <nav>
     <a href="index.html">Home</a>
     <a href="new-recipe.html">New recipe</a>
 </nav>
     <main>
-        <table id="table">
-            <thead>
-                <tr>
-                    <th>Title</th>
-                    <th>Cooking time</th>
-                    <th>Ingredients</th>
-                    <th>Instructions</th>
-                    <th>Change</th>
-                    <th>Remove</th>
-                </tr>
-            </thead>
-            <tbody id="table-body"></tbody>
-        </table>
-    <dialog id="my-modal">
-        <form id="update-form">
+        <form id="new-form">
             <label for="title">Title:</label>
             <input type="text" id="edit-title" name="title">
             <label for="cooking-time">Cooking time:</label>
@@ -39,10 +25,8 @@
             <label for="instructions">Instructions:</label>
             <textarea id="edit-instructions" name="instructions"></textarea>
             <button type="submit" id="form-submit-button">Submit</button>
-            <button type="button" id="form-cancel-button">Cancel</button>
         </form>
-    </dialog>
-    <script src="recipes.js"></script>
+    <script src="new-recipe.js"></script>
 </main>
 <footer>
     <p>© 2024</p>
