--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,8 @@
         <form id="update-form">
             <label for="title">Title:</label>
             <input type="text" id="edit-title" name="title">
-            <label for="cooking-time">Cooking time:</label>
-            <input type="text" id="edit-cooking-time" name="cooking-time">
+            <label for="cookingTime">Cooking time:</label>
+            <input type="text" id="edit-cooking-time" name="cookingTime">
             <label for="ingredients">Ingredients:</label>
             <input type="text" id="edit-ingredients" name="ingredients">
             <label for="instructions">Instructions:</label>
