--- a/public/new-recipe.html
+++ b/public/new-recipe.html
@@ -18,13 +18,13 @@
         <form id="new-form">
             <label for="title">Title:</label>
             <input type="text" id="edit-title" name="title">
-            <label for="cooking-time">Cooking time:</label>
-            <input type="text" id="edit-cooking-time" name="cooking-time">
+            <label for="cookingTime">Cooking time:</label>
+            <input type="text" id="edit-cooking-time" name="cookingTime">
             <label for="ingredients">Ingredients:</label>
             <input type="text" id="edit-ingredients" name="ingredients">
             <label for="instructions">Instructions:</label>
             <textarea id="edit-instructions" name="instructions"></textarea>
-            <button type="submit" id="form-submit-button">Submit</button>
+            <button type="submit" id="submit-button">Submit</button>
         </form>
     <script src="new-recipe.js"></script>
 </main>
