Fixes to get app to work with  Render

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
             <button type="button" id="form-cancel-button">Cancel</button>
         </form>
     </dialog>
-    <script src="recipes.js"></script>
+    <script type="module" src="recipes.js"></script>
 </main>
 <footer>
     <p>© 2024</p>
