--- a/public/new-recipe.html
+++ b/public/new-recipe.html
@@ -26,7 +26,7 @@
             <textarea id="edit-instructions" name="instructions"></textarea>
             <button type="submit" id="submit-button">Submit</button>
         </form>
-    <script src="new-recipe.js"></script>
+    <script type="module" src="new-recipe.js"></script>
 </main>
 <footer>
     <p>© 2024</p>
